[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/towers/basic_tower/BasicTower.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/StructureWall.png-ce11eefd7d9785fe5b12991260fc1bc8.stex"

[sub_resource type="CircleShape2D" id=1]
radius = 0.01

[node name="BasicTower" type="Node2D" groups=["Obstacles", "Towers"]]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 2 )
centered = false

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( 32, 32 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 1 )

[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_AttackArea_area_exited"]
